--- a/app/partials/postsFrontpage.html
+++ b/app/partials/postsFrontpage.html
@@ -3,7 +3,7 @@
         <h1 style="float:left">Posts</h1>
         <div style="padding-top:25px;text-align:right" class="col-xs-3">
             <input type="text" class="search form-control" placeholder="Search" ng-model="searchText"/>
-        <div style="clear:both;"></div>
+        <div class="clearfix"></div>
     </div>
     <div style="">
         <table class="table table-striped" style="table-layout: fixed" >
