--- a/app/partials/postsFrontpage.html
+++ b/app/partials/postsFrontpage.html
@@ -1,5 +1,5 @@
 <div id="entry-list">
-    <div style="margin-top: 0px" class="page-header">
+    <div style="margin-top: 0px" class="page-header col-md-12">
         <h1 style="float:left">Posts</h1>
         <div style="padding-top:25px;text-align:right" class="col-xs-3">
             <input type="text" class="search form-control" placeholder="Search" ng-model="searchText"/>
