--- a/app/partials/postsFrontpage.html
+++ b/app/partials/postsFrontpage.html
@@ -3,9 +3,8 @@
         <h1 style="float:left" class="col-md-9">Posts</h1>
         <div style="padding-top:25px;text-align:right" class="col-xs-3">
             <input type="text" class="search form-control" placeholder="Search" ng-model="searchText"/>
-        <div style="clear:both"></div>
     </div>
-    <div style="">
+    <div class="clear-block">
         <table class="table table-striped" style="table-layout: fixed" >
             <thead>
             <tr>
