--- a/app/partials/postsFrontpage.html
+++ b/app/partials/postsFrontpage.html
@@ -1,7 +1,7 @@
 <div id="entry-list">
-    <div style="margin-top: 0px" class="page-header col-md-12">
-        <h1 style="float:left" class="col-md-9">Posts</h1>
-        <div style="padding-top:25px;text-align:right" class="col-xs-3">
+    <div style="margin-top: 0px" class="page-header">
+        <h1 style="float:left;padding-left:0px" class="col-md-9">Posts</h1>
+        <div style="padding-top:25px;text-align:right" class="col-md-3">
             <input type="text" class="search form-control" placeholder="Search" ng-model="searchText"/>
     </div>
     <div class="clear-block">
