--- a/app/partials/postsFrontpage.html
+++ b/app/partials/postsFrontpage.html
@@ -4,7 +4,7 @@
         <div style="padding-top:25px;text-align:right" class="col-md-3">
             <input type="text" class="search form-control" placeholder="Search" ng-model="searchText"/>
     </div>
-    <div class="clear-block">
+    <div class="clearfix">
         <table class="table table-striped" style="table-layout: fixed" >
             <thead>
             <tr>
