--- a/app/partials/postsFrontpage.html
+++ b/app/partials/postsFrontpage.html
@@ -1,8 +1,9 @@
 <div id="entry-list">
     <div style="margin-top: 0px" class="page-header">
-        <h1 style="float:left;padding-left:0px" class="col-md-9">Posts</h1>
-        <div style="padding-top:25px;padding-right:0px;text-align:right" class="col-md-3">
+        <h1 style="float:left;padding-left:0px" class="col-md-10">Posts</h1>
+        <div style="padding-top:25px;padding-right:0px;text-align:right" class="col-md-2">
             <input type="text" class="search form-control" placeholder="Search" ng-model="searchText"/>
+        </div>
     </div>
     <div class="clearfix">
         <table class="table table-striped" style="table-layout: fixed" >
