--- a/app/partials/postsFrontpage.html
+++ b/app/partials/postsFrontpage.html
@@ -5,6 +5,7 @@
     </div>
 </div>
 <div id="entry-list">
+    <div class="clearfix">
         <table class="table table-striped" style="table-layout: fixed" >
             <thead>
             <tr>
@@ -31,4 +32,5 @@
             </tr>
             </tbody>
         </table>
+    </div>
 </div>
