--- a/app/partials/postsFrontpage.html
+++ b/app/partials/postsFrontpage.html
@@ -1,6 +1,8 @@
 <div style="margin-top: 0px" class="page-header">
     <h1 style="float:left;padding-left:0px" class="col-md-10">Posts</h1>
-
+    <div style="padding-top:25px;padding-right:0px;text-align:right" class="col-md-2">
+        <input type="text" class="search form-control" placeholder="Search" ng-model="searchText"/>
+    </div>
 </div>
 <div id="entry-list">
     <div class="clearfix">
@@ -16,12 +18,10 @@
                         </span>
                     </a>
                 </th>
-                <th style="width:50%"><span class="sort" data-sort="title">
-
-					</span></th>
+                <th style="width:50%"><span class="sort" data-sort="title">Title</span></th>
                 <th style="width:30%"><span class="sort" data-sort="tags">
-						<input type="text" class="search form-control" placeholder="Search" ng-model="searchText"/>
-					</span></th>
+					<input type="text" class="search form-control" placeholder="Search" ng-model="searchText"/></span>
+				</th>
             </tr>
             </thead>
             <tbody class="list">
