--- a/app/partials/postsFrontpage.html
+++ b/app/partials/postsFrontpage.html
@@ -15,7 +15,7 @@
                 </th>
                 <th style="width:50%"><span class="sort" data-sort="title">Title</span></th>
                 <th style="width:30%"><span class="sort" data-sort="tags">
-					<input type="text" class="search form-control" placeholder="Search" ng-model="searchText"/></span>
+					<input type="text" style="height: 14px;font-size: 10px;line-height: 14px;" class="search form-control" placeholder="Search" ng-model="searchText"/></span>
 				</th>
             </tr>
             </thead>
