--- a/app/partials/postsFrontpage.html
+++ b/app/partials/postsFrontpage.html
@@ -1,4 +1,4 @@
-<h1 style="float:left;padding-left:0px" class="col-md-10">Posts</h1>
+<legend>Posts</legend>
 <div id="entry-list">
     <div class="clearfix">
         <table class="table table-striped" style="table-layout: fixed" >
@@ -15,7 +15,7 @@
                 </th>
                 <th style="width:50%"><span class="sort" data-sort="title">Title</span></th>
                 <th style="width:30%"><span class="sort" data-sort="tags">
-					<input type="text" style="height: 14px;font-size: 10px;line-height: 14px;" class="search form-control" placeholder="Search" ng-model="searchText"/></span>
+					<input type="text" style="height: 20px;font-size: 10px;line-height: 20px;" class="search form-control" placeholder="Search" ng-model="searchText"/></span>
 				</th>
             </tr>
             </thead>
