--- a/app/partials/postsFrontpage.html
+++ b/app/partials/postsFrontpage.html
@@ -14,7 +14,9 @@
                 </th>
                 <th style="width:50%"><span class="sort" data-sort="title">Title</span></th>
                 <th style="width:30%"><span class="sort" data-sort="tags">
-					<input type="text" style="height: 25px;font-size: 14px;line-height: 25px;" class="search form-control" placeholder="Search" ng-model="searchText"/></span>
+					<div style="padding-right:0px;text-align:right" class="col-md-2">
+						<input type="text" style="height: 25px;font-size: 14px;line-height: 25px;" class="search form-control" placeholder="Search" ng-model="searchText"/></span>
+					</div>
 				</th>
             </tr>
             </thead>
