--- a/app/partials/postsFrontpage.html
+++ b/app/partials/postsFrontpage.html
@@ -4,7 +4,7 @@
             <thead>
             <tr>
                 <th style="width:20%;">
-                    <a href="#" ng-click="orderByField='Date'; reverseSort = !reverseSort">
+                    <a href="#" ng-click="orderByField='Date'; reverseSort = true">
                         Date
                         <span ng-show="orderByField == 'Date'">
 							<span class="caret" ng-show="!reverseSort"></span>
