--- a/app/partials/postsFrontpage.html
+++ b/app/partials/postsFrontpage.html
@@ -24,7 +24,7 @@
                 <td class="title"><a href="{{ post.Url }}">{{ post.Title }}</a></td>
                 <td class="tags">
 					<span ng-repeat="tag in post.Tags" style="margin-right:5px;margin-bottom:5px" class="label label-default">
-						{{ tag }} 
+						{{ tag }}&nbsp;
 					</span>
 				</td>
             </tr>
