--- a/app/partials/postsFrontpage.html
+++ b/app/partials/postsFrontpage.html
@@ -1,6 +1,6 @@
 <div id="entry-list">
     <div class="clearfix">
-        <table class="table table-striped" style="table-layout: fixed; word-wrap: break-word;" >
+        <table class="table table-striped" style="table-layout: fixed; word-break: break-all; word-wrap: break-word;" >
             <thead>
             <tr>
                 <th style="width:20%;">
@@ -14,7 +14,9 @@
                 </th>
                 <th style="width:50%"><span class="sort" data-sort="title">Title</span></th>
                 <th style="width:30%"><span class="sort" data-sort="tags">
-					<input type="text" style="height: 25px;font-size: 14px;line-height: 25px;" class="search form-control" placeholder="Search" ng-model="searchText"/></span>
+					<div class="container-fluid">
+						<input type="text" style="height: 25px;font-size: 14px;line-height: 25px;" class="search form-control" placeholder="Search" ng-model="searchText"/></span>
+					</div>
 				</th>
             </tr>
             </thead>
