--- a/app/partials/postsFrontpage.html
+++ b/app/partials/postsFrontpage.html
@@ -23,9 +23,11 @@
                 <td class="date">{{ post.Date | date:'dd MMM yyyy' }}<img width="150px" src="{{post.Preview}}" ng-show="post.Preview"></td>
                 <td class="title"><a href="{{ post.Url }}">{{ post.Title }}</a></td>
                 <td class="tags">
-					<span ng-repeat="tag in post.Tags" style="margin-right:5px;margin-bottom:5px" class="label label-default container-fluid">
-						{{ tag }}&nbsp;
-					</span>
+					<div class="container-fluid">
+						<span ng-repeat="tag in post.Tags" style="margin-right:5px;margin-bottom:5px" class="label label-default">
+							{{ tag }}&nbsp;
+						</span>
+					</div>
 				</td>
             </tr>
             </tbody>
