--- a/app/partials/postsFrontpage.html
+++ b/app/partials/postsFrontpage.html
@@ -22,7 +22,7 @@
             <tr ng:repeat="post in posts.entries |orderBy:orderByField:reverseSort | filter:searchText">
                 <td class="date">{{ post.Date | date:'dd MMM yyyy' }}<img width="150px" src="{{post.Preview}}" ng-show="post.Preview"></td>
                 <td class="title"><a href="{{ post.Url }}">{{ post.Title }}</a></td>
-                <td class="tags" style="overflow: auto;">
+                <td class="tags">
 						<span ng-repeat="tag in post.Tags" style="margin-right:5px;margin-bottom:5px" class="label label-default">
 							{{ tag }}&nbsp;
 						</span>
