--- a/app/partials/postsFrontpage.html
+++ b/app/partials/postsFrontpage.html
@@ -3,7 +3,7 @@
 			<table class="table table-striped" style="table-layout: fixed; word-wrap: break-word;" >
 				<thead>
 				<tr>
-					<th style="width:20%;min-width: 100px;">
+					<th style="width:20%;min-width: 100px;idth:auto !important; ">
 						<a href="#" ng-click="orderByField='Date'; reverseSort = !reverseSort">
 							Date
 							<span ng-show="orderByField == 'Date'">
@@ -12,8 +12,8 @@
 							</span>
 						</a>
 					</th>
-					<th style="width:50%;min-width: 100px;"><span class="sort" data-sort="title">Title</span></th>
-					<th style="width:30%;min-width: 100px;"><span class="sort" data-sort="tags">
+					<th style="width:50%;min-width: 100px;idth:auto !important; "><span class="sort" data-sort="title">Title</span></th>
+					<th style="width:30%;min-width: 100px;idth:auto !important; "><span class="sort" data-sort="tags">
 						<input type="text" style="height: 25px;font-size: 14px;line-height: 25px;" class="search form-control" placeholder="Search" ng-model="searchText"/></span>
 					</th>
 				</tr>
