--- a/app/partials/postsFrontpage.html
+++ b/app/partials/postsFrontpage.html
@@ -1,6 +1,6 @@
 <div id="entry-list">
     <div class="clearfix">
-			<table class="table table-striped" style="word-break:normal;" >
+			<table class="table table-striped" style="" >
 				<thead>
 				<tr>
 					<th style="width:20%;">
