--- a/app/partials/postsFrontpage.html
+++ b/app/partials/postsFrontpage.html
@@ -12,8 +12,8 @@
 							</span>
 						</a>
 					</th>
-					<th style="width:50%;min-width:150px"><span class="sort" data-sort="title">Title</span></th>
-					<th style="width:30%;"><span class="sort" data-sort="tags">
+					<th style="width:60%;min-width:150px"><span class="sort" data-sort="title">Title</span></th>
+					<th style="width:30%;min-width:100px;"><span class="sort" data-sort="tags">
 						<input type="text" style="height: 25px;font-size: 14px;line-height: 25px;" class="search form-control" placeholder="Search" ng-model="searchText"/></span>
 					</th>
 				</tr>
