--- a/app/partials/postsFrontpage.html
+++ b/app/partials/postsFrontpage.html
@@ -1,9 +1,9 @@
 <div id="entry-list">
     <div class="clearfix">
-			<table class="table table-striped" style="word-wrap: normal;word-break:break-all;" >
+			<table class="table table-striped" style="table-layout:fixed; word-wrap: normal;word-break:break-all;" >
 				<thead>
 				<tr>
-					<th style="width:10%;min-width:30px">
+					<th style="width:100px">
 						<a href="#" ng-click="orderByField='Date'; reverseSort = !reverseSort">
 							Date
 							<span ng-show="orderByField == 'Date'">
