--- a/app/partials/postsFrontpage.html
+++ b/app/partials/postsFrontpage.html
@@ -12,7 +12,7 @@
 							</span>
 						</a>
 					</th>
-					<th style="width:300px"><span class="sort" data-sort="title">Title</span></th>
+					<th style="width:40%"><span class="sort" data-sort="title">Title</span></th>
 					<th style=""><span class="sort" data-sort="tags">
 						<input type="text" style="height: 25px;font-size: 14px;line-height: 25px;" class="search form-control" placeholder="Search" ng-model="searchText"/></span>
 					</th>
