--- a/app/partials/postsFrontpage.html
+++ b/app/partials/postsFrontpage.html
@@ -23,7 +23,7 @@
 					<td class="date">{{ post.Date | date:'dd MMM yyyy' }}<img width="150px" src="{{post.Preview}}" ng-show="post.Preview"></td>
 					<td class="title"> <a href="{{ post.Url }}">{{ post.Title }}</a></td>
 					<td class="tags">
-							<span ng-repeat="tag in post.Tags" style="margin-right:5px;margin-bottom:5px" class="label label-default">{{tag}}</span> &nbsp; t t
+							<span ng-repeat="tag in post.Tags" style="margin-right:5px;margin-bottom:5px" class="label label-default">{{tag}}t t</span> &nbsp; 
 					</td>
 				</tr>
 				</tbody>
