--- a/app/partials/postsFrontpage.html
+++ b/app/partials/postsFrontpage.html
@@ -24,7 +24,7 @@
 					<td class="title"> <a href="{{ post.Url }}">{{ post.Title }}</a></td>
 					<td class="tags">
 						<div ng-repeat="tag in post.Tags" style="display:inline-block;">
-							<span style="margin-right:5px;margin-bottom:5px" class="label label-default">{{tag}}</span> &nbsp; 
+							<span style="margin-bottom:5px" class="label label-default">{{tag}}</span>
 						</div>
 					</td>
 				</tr>
