--- a/app/partials/postsFrontpage.html
+++ b/app/partials/postsFrontpage.html
@@ -12,7 +12,13 @@
 							</span>
 						</a>
 					</th>
-					<th style="width:45%"><span class="sort" data-sort="title">Title</span></th>
+					<th style="width:45%">
+						<a href="#" ng-click="orderByField='Title'; reverseSort = !reverseSort">
+						Title
+						<span ng-show="orderByField == 'Title'">
+							<span class="caret" ng-show="!reverseSort"></span>
+							<span class="caret caret-reversed" ng-show="reverseSort"></span>
+						</span>
 					<th style=""><span class="sort" data-sort="tags">
 						<input type="text" style="height: 25px;font-size: 14px;line-height: 25px;" class="search form-control" placeholder="Search" ng-model="searchText"/></span>
 					</th>
