--- a/_includes/widgets/comments/form.html
+++ b/_includes/widgets/comments/form.html
@@ -25,7 +25,7 @@
             <br />
             <div class="row">
                 <div class="col-xs-12 col-md-12 form-group">
-                    <button class="btn btn-primary pull-right" ng-click="submitComment()">Submit</button>
+                    <button class="btn btn-primary pull-right" ng-click="submit()">Submit</button>
                 </div>
             </div>
         </form>
