--- a/_includes/widgets/comments/form.html
+++ b/_includes/widgets/comments/form.html
@@ -1,7 +1,7 @@
 <legend><span class="glyphicon glyphicon-edit" style="font-size:0.8em"></span> Drop me a line!</legend>
-<div class="row">
+<div class="row" ng-controller="CommentsCtrl">
     <div class="col-sm-12 contact-form">
-        <form ng-controller="CommentsCtrl" id="comment" class="form" role="form">
+        <form  id="comment" class="form" role="form">
             <div class="row">
                 <div class="col-xs-6 col-md-6 form-group">
                     <div class="input-group">
