--- a/_includes/widgets/comments/form.html
+++ b/_includes/widgets/comments/form.html
@@ -6,7 +6,7 @@
                 <div class="col-xs-6 col-md-6 form-group">
                     <div class="input-group">
                         <span class="input-group-addon"><span class="glyphicon glyphicon-user"></span></span>
-                        <input class="form-control" id="name" name="name" placeholder="Your Name" data-model="userName" type="text" required />
+                        <input class="form-control" id="name" name="name" placeholder="Your Name" ng-model="userName" type="text" required />
                     </div>
                 </div>
                 <div class="col-xs-6 col-md-6 form-group">
