--- a/_includes/widgets/comments/form.html
+++ b/_includes/widgets/comments/form.html
@@ -12,15 +12,15 @@
                 <div class="col-xs-6 col-md-6 form-group">
                     <div class="input-group">
                         <span class="input-group-addon"><span class="glyphicon glyphicon-envelope"></span></span>
-                        <input class="form-control" id="email" name="email" placeholder="Mail Address" type="email" />
+                        <input class="form-control" id="email" name="email" ng-model="userMail" placeholder="Mail Address" type="email" />
                     </div>
                 </div>
             </div>
             <div class="input-group" >
                 <span class="input-group-addon" style="vertical-align: top"><span class="glyphicon glyphicon-comment" style="margin-top:3px"></span></span>
-                <textarea class="form-control" id="message" name="message" placeholder="Message" rows="5" required></textarea>
-                <input type="hidden" name="pageTitle" value="{{page.title}}">
-                <input type="hidden" name="pageUrl" value="{{page.url}}">
+                <textarea class="form-control" id="message" name="message" ng-model="commentText" placeholder="Message" rows="5" required></textarea>
+                <input type="hidden" name="pageTitle" ng-model="pageTitle = {{page.title}}">
+                <input type="hidden" name="pageUrl" ng-model="pageUrl = {{page.url}}">
             </div>
             <br />
             <div class="row">
