--- a/_includes/widgets/comments/form.html
+++ b/_includes/widgets/comments/form.html
@@ -12,7 +12,7 @@
                 <div class="col-xs-6 col-md-6 form-group">
                     <div class="input-group">
                         <span class="input-group-addon"><span class="glyphicon glyphicon-envelope"></span></span>
-                        <input class="form-control" id="email" name="email" ng-model="userMail" placeholder="Mail Address" type="email" />
+                        <input class="form-control" id="email" name="email" placeholder="Mail Address" ng-model="userMail" type="email" />
                     </div>
                 </div>
             </div>
