--- a/_includes/widgets/comments/form.html
+++ b/_includes/widgets/comments/form.html
@@ -5,13 +5,13 @@
             <div class="row">
                 <div class="col-xs-6 col-md-6 form-group">
                     <div class="input-group">
-                        <span class="input-group-addon"><span class="glyphicon glyphicon-user"></span></span>
+                        <span class="input-group-addon"><span class="glyphicon glyphicon-user"></span>
                         <input class="form-control" id="name" name="name" placeholder="Your Name" ng-model="userName" type="text" required />
                     </div>
                 </div>
                 <div class="col-xs-6 col-md-6 form-group">
                     <div class="input-group">
-                        <span class="input-group-addon"><span class="glyphicon glyphicon-envelope"></span></span>
+                        <span class="input-group-addon"><span class="glyphicon glyphicon-envelope"></span>
                         <input class="form-control" id="email" name="email" placeholder="Mail Address" ng-model="userMail" type="email" />
                     </div>
                 </div>
@@ -19,8 +19,8 @@
             <div class="input-group" >
                 <span class="input-group-addon" style="vertical-align: top"><span class="glyphicon glyphicon-comment" style="margin-top:3px"></span></span>
                 <textarea class="form-control" id="message" name="message" ng-model="commentText" placeholder="Message" rows="5" required></textarea>
-                <input type="hidden" name="pageTitle">
-                <input type="hidden" name="pageUrl">
+                <input type="hidden" name="pageTitle" ng-model="pageTitle" value="{{page.title}}">
+                <input type="hidden" name="pageUrl" ng-model="pageUrl" value="{{page.url}}">
             </div>
             <br />
             <div class="row">
