--- a/_includes/widgets/comments/form.html
+++ b/_includes/widgets/comments/form.html
@@ -5,13 +5,13 @@
             <div class="row">
                 <div class="col-xs-6 col-md-6 form-group">
                     <div class="input-group">
-                        <span class="input-group-addon"><span class="glyphicon glyphicon-user"></span>
+                        <span class="input-group-addon"><span class="glyphicon glyphicon-user"></span></span>
                         <input class="form-control" id="name" name="name" placeholder="Your Name" ng-model="userName" type="text" required />
                     </div>
                 </div>
                 <div class="col-xs-6 col-md-6 form-group">
                     <div class="input-group">
-                        <span class="input-group-addon"><span class="glyphicon glyphicon-envelope"></span>
+                        <span class="input-group-addon"><span class="glyphicon glyphicon-envelope"></span></span>
                         <input class="form-control" id="email" name="email" placeholder="Mail Address" ng-model="userMail" type="email" />
                     </div>
                 </div>
