--- a/app/partials/comments.html
+++ b/app/partials/comments.html
@@ -11,8 +11,8 @@
 		<tbody>
 			<tr ng:repeat="comment in comments.entries | filter: { pageTitle: filterString }| orderObjectBy:'timestamp':true | limitTo:quantity">
 				<td class="col-sm-2" style="border-top: none;">
-					<a href="tst">{{comment.pageTitle}}</a><br>
-					<span style="font-size:0.8em;">By: <a href="mailto:{{mail}}">{{comment.name}}</a> on {{comment.keen.timestamp | date:'dd MMM yyyy' }}</span>
+					<a href="{{comment.pageUrl}}">{{comment.pageTitle}}</a><br>
+					<span style="font-size:0.8em;">By: <a href="mailto:{{email}}">{{comment.name}}</a> on {{comment.keen.timestamp | date:'dd MMM yyyy' }}</span>
 				</td>
 				<td class="col-sm-9" style="border-top: none;">
 					{{comment.message}}
