--- a/_includes/widgets/interactive-table.html
+++ b/_includes/widgets/interactive-table.html
@@ -4,7 +4,7 @@
         <input type="text" class="search form-control" placeholder="Search" />
     </div>
 
-    <div style="">
+    <div style="" ng-controller="RatingCtrl">
         <table class="table table-striped" style="table-layout: fixed" >
             <thead>
             <tr>
