--- a/_includes/widgets/tagCloud.html
+++ b/_includes/widgets/tagCloud.html
@@ -15,9 +15,11 @@ For more Jekyll widgets, see <http://www.github.com/NetzwergX/jekyll-template-to
 {% endcomment %}
 <section>
     <h1>Tags <span class="hint">({{site.tags.size}})</span></h1>
+	<div style="padding-bottom:10px">
 	{% for tag in site.tags %}
 		<a href="tags.html#{{ tag | first | cgi_encode }}" style="font-size:{{tag | last | size | times:100 | divided_by:site.tags.size | plus:100}}%">
 			{{ tag | first }}
 		</a>
 	{% endfor %}
+	</div>
 </section>
