--- a/_includes/widgets/tagCloud.html
+++ b/_includes/widgets/tagCloud.html
@@ -16,8 +16,10 @@ For more Jekyll widgets, see <http://www.github.com/NetzwergX/jekyll-template-to
 <section>
     <h1>Tags <span class="hint">({{site.tags.size}})</span></h1>
 	{% for tag in site.tags %}
+		<span class="badge">
 		<a href="tags.html#{{ tag | first | cgi_encode }}" style="font-size:{{tag | last | size | times:100 | divided_by:site.tags.size | plus:100}}%">
-			<span class="badge">{{ tag | first }}</span>
+			{{ tag | first }}
 		</a>
+		</span>
 	{% endfor %}
 </section>
