--- a/_includes/widgets/tagCloud.html
+++ b/_includes/widgets/tagCloud.html
@@ -15,9 +15,9 @@ For more Jekyll widgets, see <http://www.github.com/NetzwergX/jekyll-template-to
 {% endcomment %}
 <section>
     <h1>Tags <span class="hint">({{site.tags.size}})</span></h1>
-	{% for tag in site.tags %}
+	{% for tag in tags_list %}
 		<a href="tags.html#{{ tag | first | cgi_encode }}" style="font-size:{{tag | last | size | times:100 | divided_by:site.tags.size | plus:100}}%">
-			{{ tag | first }}
+			{{ tag | first }} ({{site.tags[tag].size}})
 		</a>
 	{% endfor %}
 </section>
