--- a/_includes/widgets/comments/form.html
+++ b/_includes/widgets/comments/form.html
@@ -1,5 +1,5 @@
 <legend><span class="glyphicon glyphicon-edit" style="font-size:0.8em"></span> Drop me a line!</legend>
-<div class="row" ng-controller="CommentsCtrl">
+<div class="row">
     <div class="col-sm-12 contact-form">
         <form name="commentForm" class="form" role="form">
             <div class="row">
