--- a/app/partials/postsFrontpage.html
+++ b/app/partials/postsFrontpage.html
@@ -26,8 +26,13 @@
 				</thead>
 				<tbody class="list">
 				<tr ng:repeat="post in posts.entries |orderBy:orderByField:reverseSort | filter:searchText">
-					<td class="date">{{ post.Date | date:'dd MMM yyyy' }}<img width="150px" src="{{post.Preview}}" ng-show="post.Preview"></td>
-					<td class="title"> <a href="{{ post.Url }}">{{ post.Title }}</a></td>
+					<td class="date">{{ post.Date | date:'dd MMM yyyy' }}" ng-show="post.Preview"></td>
+					<td class="title">
+						{% if %}
+							<img width="150px" src="{{post.Preview}}">
+						{% endif %}
+						<a href="{{ post.Url }}">{{ post.Title }}</a>
+					</td>
 					<td class="tags">
 						<div ng-repeat="tag in post.Tags" style="display:inline-block;margin-right:5px;">
 							<span style="margin-bottom:5px" class="label label-default">{{tag}}</span>
