--- a/app/partials/postsFrontpage.html
+++ b/app/partials/postsFrontpage.html
@@ -26,7 +26,7 @@
 				</thead>
 				<tbody class="list">
 				<tr ng:repeat="post in posts.entries |orderBy:orderByField:reverseSort | filter:searchText">
-					<td class="date">{{ post.Date | date:'dd MMM yyyy' }}></td>
+					<td class="date">{{ post.Date | date:'dd MMM yyyy' }}</td>
 					<td class="title">
 						{% if %}
 							<img width="150px" src="{{post.Preview}}">
