--- a/app/partials/postsFrontpage.html
+++ b/app/partials/postsFrontpage.html
@@ -28,7 +28,7 @@
 				<tr ng:repeat="post in posts.entries |orderBy:orderByField:reverseSort | filter:searchText">
 					<td class="date">{{ post.Date | date:'dd MMM yyyy' }}</td>
 					<td class="title">
-						<img width="150px" src="{{post.Preview}}" ng-switch on="post.Preview">
+						<img width="150px" ng-src="{{ post.Preview || '' }}">
 						<a href="{{ post.Url }}">{{ post.Title }}</a>
 					</td>
 					<td class="tags">
