--- a/app/partials/postsFrontpage.html
+++ b/app/partials/postsFrontpage.html
@@ -12,7 +12,7 @@
 							</span>
 						</a>
 					</th>
-					<th style="width:45%">
+					<th style="">
 						<a href="#" ng-click="orderByField='Title'; reverseSort = !reverseSort">
 						Title
 						<span ng-show="orderByField == 'Title'">
@@ -26,7 +26,7 @@
 				</thead>
 				<tbody class="list">
 				<tr ng:repeat="post in posts.entries |orderBy:orderByField:reverseSort | filter:searchText">
-					<td class="date">{{ post.Date | date:'dd MM yyyy' }}</td>
+					<td class="date" width="100px">{{ post.Date | date:'dd MM yyyy' }}</td>
 					<td class="title">
 						<img width="150px" ng-src="{{ post.Preview || '' }}">
 						<a href="{{ post.Url }}">{{ post.Title }}</a>
