--- a/app/partials/postsFrontpage.html
+++ b/app/partials/postsFrontpage.html
@@ -19,7 +19,7 @@
 							<span class="caret" ng-show="!reverseSort"></span>
 							<span class="caret caret-reversed" ng-show="reverseSort"></span>
 						</span>
-					<th style="width:100px;max-width:200px;"><span class="sort" data-sort="tags">
+					<th style="max-width:200px;"><span class="sort" data-sort="tags">
 						<input type="text" style="height: 25px;font-size: 14px;line-height: 25px;" class="search form-control" placeholder="Search" ng-model="searchText"/></span>
 					</th>
 				</tr>
