--- a/app/partials/postsFrontpage.html
+++ b/app/partials/postsFrontpage.html
@@ -3,7 +3,7 @@
 			<table class="table table-striped" style="table-layout:fixed; word-wrap: break-word;word-break:break-all;" >
 				<thead>
 				<tr>
-					<th style="width:100px">
+					<th class="col-xs-2 col-md-2">
 						<a href="#" ng-click="orderByField='Date'; reverseSort = !reverseSort">
 							Date
 							<span ng-show="orderByField == 'Date'">
@@ -12,14 +12,14 @@
 							</span>
 						</a>
 					</th>
-					<th style="">
+					<th class="col-xs-8 col-md-8">
 						<a href="#" ng-click="orderByField='Title'; reverseSort = !reverseSort">
 						Title
 						<span ng-show="orderByField == 'Title'">
 							<span class="caret" ng-show="!reverseSort"></span>
 							<span class="caret caret-reversed" ng-show="reverseSort"></span>
 						</span>
-					<th class="col-xs-1 col-md-4"><span class="sort" data-sort="tags">
+					<th class="col-xs-2 col-md-4"><span class="sort" data-sort="tags">
 						<input type="text" style="height: 25px;font-size: 14px;line-height: 25px;" class="search form-control" placeholder="Search" ng-model="searchText"/></span>
 					</th>
 				</tr>
