--- a/app/partials/postsFrontpage.html
+++ b/app/partials/postsFrontpage.html
@@ -3,7 +3,7 @@
 			<table class="table table-striped" style="table-layout:fixed; word-wrap: break-word;word-break:break-all;" >
 				<thead>
 				<tr>
-					<th class="col-xs-2 col-md-2">
+					<th style="width:100px">
 						<a href="#" ng-click="orderByField='Date'; reverseSort = !reverseSort">
 							Date
 							<span ng-show="orderByField == 'Date'">
