--- a/app/partials/postsFrontpage.html
+++ b/app/partials/postsFrontpage.html
@@ -1,5 +1,5 @@
 <div id="entry-list">
-    <div class="box clearfix" ng-animate="'box'">
+    <div class="clearfix">
 			<table class="table table-striped" style="table-layout:fixed; word-wrap: break-word;word-break:break-all;" >
 				<thead>
 				<tr>
