--- a/app/partials/comments.html
+++ b/app/partials/comments.html
@@ -1,5 +1,5 @@
 <!-- only show this block, if there are any comments for this page -->
-<div ng-cloak ng-show="comments.entries.length>0">
+<div ng-animate="'fade'" ng-cloak ng-show="comments.entries.length>0">
 	<legend><span class="glyphicon glyphicon-comment" style="font-size:0.8em"></span> 
 		Comments
 		<button class="btn btn-primary btn-xs" type="button" ng-click="more()" ng-cloak ng-show="comments.entries.length>3">
