--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="en" style="transform: scale(1.4); -webkit-transform: scale(1.4); -webkit-transform-origin: 0 0; -moz-transform: scale(1.4); -moz-transform-origin: 0 0; -o-transform: scale(1.4); -o-transform-origin: 0 0; -ms-transform: scale(1.4); -ms-transform-origin: 0 0;">
+<html lang="en" >
 <head>
     <meta charset="utf-8">
     <title>{{ page.title }}</title>
@@ -56,7 +56,7 @@
     <link href="{{ BASE_PATH }}{{ site.JB.rss_path }}" type="application/rss+xml" rel="alternate" title="Sitewide RSS Feed">
 </head>
 
-<body style="" id="myApp">
+<body style="" id="myApp" style="transform: scale(1.4); -webkit-transform: scale(1.4); -webkit-transform-origin: 0 0; -moz-transform: scale(1.4); -moz-transform-origin: 0 0; -o-transform: scale(1.4); -o-transform-origin: 0 0; -ms-transform: scale(1.4); -ms-transform-origin: 0 0;">
 <toaster-container toaster-options="{'time-out': 3000, 'position-class': 'toast-bottom-right'}" ng-controller="ToasterController"></toaster-container>
 <div class="navbar navbar-default ">
     <div class="container col-lg-7 col-centered" style="float:none">
