--- a/app/partials/postsFrontpage.html
+++ b/app/partials/postsFrontpage.html
@@ -11,7 +11,6 @@
 								<span class="caret caret-reversed" ng-show="reverseSort"></span>
 							</span>
 						</a>
-						<img width="150px" ng-src="{{ post.Preview || '' }}">
 					</th>
 					<th class="col-xs-8 col-md-8">
 						<a href="#" ng-click="orderByField='Title'; reverseSort = !reverseSort">
@@ -27,7 +26,10 @@
 				</thead>
 				<tbody class="list">
 				<tr ng:repeat="post in posts.entries |orderBy:orderByField:reverseSort | filter:searchText">
-					<td class="date">{{ post.Date | date:'dd MM yyyy' }}</td>
+					<td class="date">
+						{{ post.Date | date:'dd MM yyyy' }}
+						<img width="150px" ng-src="{{ post.Preview || '' }}">
+					</td>
 					<td class="title">
 						<a href="{{ post.Url }}">{{ post.Title }}</a>
 					</td>
