--- a/app/partials/postsFrontpage.html
+++ b/app/partials/postsFrontpage.html
@@ -36,7 +36,7 @@
 						</div>
 					</td>
 					<td class="title">
-						<a href="{{ post.Url }}">{{ post.Title }}</a>
+						<a href="{{ post.Url }}">{{ post.Text }}</a>
 					</td>
 					<td class="tags">
 						<div ng-repeat="tag in post.Tags" style="display:inline-block;margin-right:5px;">
