--- a/app/partials/postsFrontpage.html
+++ b/app/partials/postsFrontpage.html
@@ -35,10 +35,10 @@
 							<img width="150px" ng-src="{{ post.Preview || '' }}">
 						</div>
 					</td>
-					<td class="title">
-						<div>
+					<td class="title ">
+						<div style="margin-left: 10px;">
 							{{ post.Preview }}
-						</div style="padding:10px">
+						</div>
 					</td>
 					<td class="tags hidden-xs">
 						<div ng-repeat="tag in post.Tags" style="display:inline-block;margin-right:5px;">
