--- a/app/partials/postsFrontpage.html
+++ b/app/partials/postsFrontpage.html
@@ -37,7 +37,7 @@
 					</td>
 					<td class="title ">
 						<div style="margin-left: 10px;">
-							{{ post.Preview }}
+							{{ post.PreviewText }}
 						</div>
 					</td>
 					<td class="tags hidden-xs">
