--- a/app/partials/postsFrontpage.html
+++ b/app/partials/postsFrontpage.html
@@ -14,7 +14,7 @@
 					</th>
 					<th class="col-xs-12 col-md-8">
 						<a href="#" ng-click="orderByField='Title'; reverseSort = !reverseSort">
-						Excerpt
+						Posts
 						<span ng-show="orderByField == 'Title'">
 							<span class="caret" ng-show="!reverseSort"></span>
 							<span class="caret caret-reversed" ng-show="reverseSort"></span>
