--- a/app/partials/postsFrontpage.html
+++ b/app/partials/postsFrontpage.html
@@ -37,6 +37,7 @@
 					</td>
 					<td class="title ">
 						<div style="margin-left: 10px;">
+							<a class="show-xs" href="{{post.Url}}">{{ post.Title }}</a>
 							{{ post.PreviewText }}
 						</div>
 					</td>
