--- a/app/partials/postsFrontpage.html
+++ b/app/partials/postsFrontpage.html
@@ -37,7 +37,7 @@
 					</td>
 					<td class="title ">
 						<div style="margin-left: 10px;">
-							<span class="visible-xs"><h4 style="display: inline-block;"><a href="{{post.Url}}">{{ post.Title }}</a></h4>{{ post.Date | date:'dd MM yyyy' }}</span>
+							<span class="visible-xs"><h4 style="display: inline-block;"><a href="{{post.Url}}">{{ post.Title }}</a></h4><small>, {{ post.Date | date:'dd MM yyyy' }}</small></span>
 							{{ post.PreviewText }}
 						</div>
 					</td>
