--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -96,7 +96,10 @@
 				</div>
             </form>
 			<div class="visible-xs">
-				tet
+				<a href="/app/admin/fork.html">Clone/Fork</a>
+				<a href="/app/admin/editConfig.html">Edit Config</a>
+				<a href="/app/admin/edit.html">Create Post</a>
+				<a href="/app/admin/admin.html">Admin</a>
 			</div>
         </div>
     </div>
